syntax="proto3";

package mq;
option go_package=".;mq";

option php_namespace = "DucCnzj\\EventBusSdk\\Mq";
option php_metadata_namespace="Mq";

message Pub {
  string data = 1;
  string queue = 2;
}

message Response {
  bool success = 1;
  string data = 2;
  string queue = 3;
  uint64 id = 4;
  string runAfter = 5;
  uint64 delaySeconds = 6;
}

message Sub {
  string queue = 1;
}

message QueueId {
  uint64 id = 1;
}

message delayPublishRequest {
  string data = 1;
  string queue = 2;
  uint64 seconds = 3;
}

service Mq {
  rpc publish(Pub) returns (Response);
  rpc delayPublish(delayPublishRequest) returns (Response);
  rpc subscribe(Sub) returns (Response);
  rpc ack(QueueId) returns (Response);
}